--- a/src/app/shared.less
+++ b/src/app/shared.less
@@ -69,23 +69,7 @@ input:invalid, textarea:invalid {
 
 /* 10 CONTENT 		============================================================================= */
 
-header[role="banner"] {
-    margin: 0px auto;
-    width: 400px;
-    text-align: center;
-    
-    h1 {
-        color: rgba(102, 102, 102, 1.0);
-        text-shadow: 0px 3px 2px rgba(102, 102, 102, 1.0);
-        letter-spacing: 0.2em;
-        font-family:"Open Sans", Arial, sans-serif;
-        font-weight: 600;
-        
-        span {
-            color: rgba(247, 147, 30, 1.0);
-        }
-    }
-}
+
 
  .roundbutton {
     width: 71px;
